deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app
  labels:
    app: go-web-app
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: go-web-app
  template:  # from here pod related
    metadata:
      labels: 
        app: go-web-app
    spec:
      containers:
        - name: go-web-app
          image: princecharu/go-web-app:v1 
          ports:
            - containerPort: 8080  # port with which the app is containerized
