service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: my-app
  labels:
    app: my-app
spec:
  ports:
  - port: 80
    targetPort: 8080  # this is container port with which the app is running. 
    protocol: TCP
  selector:
    app: my-app	
  type: ClusterIP   # exposes the service within the cluster 

# here the selector: app name must be matched with pod's template: label in deplyment.yaml file
